# SecProbe

./: .gitignore  README.md  pyproject.toml  railway.json  requirements.txt  setup.py
.github/workflows/: ci.yml
.next/: trace  trace-build
api/: .env.example  Dockerfile  main.py  requirements.txt
dashboard/: _headers  index.html  netlify.toml  robots.txt
dashboard-next/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
dashboard-next/app/: globals.css  layout.tsx  page.tsx
dashboard-next/components/: AnimatedCounter.tsx  SeverityBarChart.tsx  SeverityPieChart.tsx
dashboard-next/lib/: api.ts
secprobe/: __init__.py  __main__.py  cli.py  config.py  models.py  report.py  report_ai.py  utils.py
secprobe/adversary/: attack_mapper.py  kill_chain.py  (+1 more)
tests/: __init__.py  test_adversary.py  test_agent_training.py  test_agents.py  test_api_discoverer.py  test_attack_graph.py  test_auth_handler.py  test_base_scanner.py  test_behavioral_scanners.py  test_benchmark.py  test_bridge.py  test_cert_integration.py  test_certification.py  test_config.py  test_context.py  test_core_infrastructure.py  test_detection_engine.py  test_discovery_engine.py  test_ecosystem.py  test_exceptions.py  test_federated_sync.py  test_html_parser.py  test_http_client.py  test_integration.py  test_intelligence.py  test_js_extractor.py  test_juice_shop_scanner.py  test_models.py  test_passive_session.py  test_payload_manager.py  test_procedure_recorder.py  test_recorder.py  test_remediation.py  test_report_ai.py  test_response_analyzer.py  test_safe_mode.py  test_scan_intelligence.py  test_scan_session.py  test_scanners.py  test_smart_scanner.py  (+14 more)
(+193 files in other folders)
