[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "secprobe"
version = "7.0.0"
description = "Enterprise Security Testing Toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SecProbe Team"},
]
keywords = ["security", "pentest", "vulnerability", "scanner", "web-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.31.0",
    "dnspython>=2.4.0",
    "urllib3>=2.0.0",
    "pyyaml>=6.0.0",
    "curl_cffi>=0.7.0",
    "httpx[http2]>=0.27.0",
    "playwright>=1.40.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
secprobe = "secprobe.cli:main"

[project.urls]
Homepage = "https://github.com/secprobe/secprobe"

[tool.setuptools.packages.find]
include = ["secprobe*"]

[tool.setuptools.package-data]
"secprobe.payloads" = ["*.txt", "*.yaml"]
"secprobe.templates" = ["**/*.yaml", "**/*.yml"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
